--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ecommerce_frontend
+spring.application.name=ecommerce
 server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
